fix z-index of navbar to be on top of facebook share of schedule

--- a/server/static/sass/_base.scss
+++ b/server/static/sass/_base.scss
@@ -119,7 +119,7 @@ a:hover {
 }
 
 .navbar {
-  z-index: 100;
+  z-index: 200;
   background: rgb(250, 250, 250);
   @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
   height: $navbar-height;
